# speech-to-text

./: README.md  Taskfile.colors.yml  workspace.code-workspace
client/: Taskfile.yml  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: AudioVisualizer.tsx  LanguageSelector.tsx  Progress.tsx
server/: .dockerignore  .env.example  Dockerfile  README.md  Taskfile.yml  pyproject.toml  pyrightconfig.json
server/src/: app.py
